tested on Windows and macOS

--- a/AdTree/CMakeLists.txt
+++ b/AdTree/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(${PROJECT_NAME}
 )
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "AdTree")
 
+set(default_build_type "Release")
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_glew_INCLUDE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_glfw_INCLUDE_DIR})
