--- a/3rd_party/easy3d/fileio/CMakeLists.txt
+++ b/3rd_party/easy3d/fileio/CMakeLists.txt
@@ -5,11 +5,17 @@ project(${PROJECT_NAME})
 
 
 set(${PROJECT_NAME}_HEADERS
+    graph_io.h
+    ply_reader_writer.h
     point_cloud_io.h
     surface_mesh_io.h
+
     )
 
 set(${PROJECT_NAME}_SOURCES
+    graph_io.cpp
+    graph_io_ply.cpp
+    ply_reader_writer.cpp
     point_cloud_io.cpp
     point_cloud_io_xyz.cpp
     surface_mesh_io.cpp
@@ -23,7 +29,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "3rd_party/easy3d")
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_easy3d_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} core)
+target_link_libraries(${PROJECT_NAME} core rply)
 
 if (MSVC)
     target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_DEPRECATE)
