set (OpenGL_GL_PREFERENCE GLVND)

--- a/3rd_party/easy3d/viewer/CMakeLists.txt
+++ b/3rd_party/easy3d/viewer/CMakeLists.txt
@@ -79,7 +79,9 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_easy3d_INCLUDE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_glew_INCLUDE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_glfw_INCLUDE_DIR})
 
+set (OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
+message(STATUS "OpenGL libraries: ${OPENGL_LIBRARIES}")
 target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} glew glfw core util fileio tinyfiledialogs)
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE GLEW_STATIC)
