--- a/AdTree/CMakeLists.txt
+++ b/AdTree/CMakeLists.txt
@@ -28,7 +28,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_lm_INCLUDE_DIR})
 target_compile_definitions(${PROJECT_NAME} PRIVATE GLEW_STATIC)
 
 
-set (OpenGL_GL_PREFERENCE GLVND)
+#set (OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
 message(STATUS "OpenGL libraries: ${OPENGL_LIBRARIES}")
 target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} glew glfw imgui core util fileio algo viewer tetgen kd_tree cminpack optimizer_lm)
