--- a/3rd_party/optimizer_lm/CMakeLists.txt
+++ b/3rd_party/optimizer_lm/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
-get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set(PROJECT_NAME 3rd_${MODULE_NAME})
 project(${PROJECT_NAME})
 
 
@@ -16,4 +17,4 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_cminpack_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} cminpack)
+target_link_libraries(${PROJECT_NAME} 3rd_cminpack)
