--- a/3rd_party/easy3d/viewer/CMakeLists.txt
+++ b/3rd_party/easy3d/viewer/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
-get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set(PROJECT_NAME 3rd_${MODULE_NAME})
 project(${PROJECT_NAME})
 
 
@@ -82,7 +83,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_glfw_INCLUDE_DIR})
 set (OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
 message(STATUS "OpenGL libraries: ${OPENGL_LIBRARIES}")
-target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} glew glfw core util fileio tinyfiledialogs)
+target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} 3rd_glew 3rd_glfw 3rd_core 3rd_util 3rd_fileio 3rd_tinyfiledialogs)
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE GLEW_STATIC)
 
