--- a/3rd_party/easy3d/viewer/CMakeLists.txt
+++ b/3rd_party/easy3d/viewer/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
 get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-set(PROJECT_NAME 3rd_${MODULE_NAME})
+set(PROJECT_NAME easy3d_${MODULE_NAME})
 project(${PROJECT_NAME})
 
 
@@ -83,9 +83,8 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_glfw_INCLUDE_DIR})
 set (OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
 message(STATUS "OpenGL libraries: ${OPENGL_LIBRARIES}")
-target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} 3rd_glew 3rd_glfw 3rd_core 3rd_util 3rd_fileio 3rd_tinyfiledialogs)
-
 target_compile_definitions(${PROJECT_NAME} PRIVATE GLEW_STATIC)
+target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} 3rd_glew 3rd_glfw easy3d_core easy3d_util easy3d_fileio 3rd_tinyfiledialogs)
 
 
 if (MSVC)
