--- a/3rd_party/easy3d/core/CMakeLists.txt
+++ b/3rd_party/easy3d/core/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
 get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-set(PROJECT_NAME 3rd_${MODULE_NAME})
+set(PROJECT_NAME easy3d_${MODULE_NAME})
 project(${PROJECT_NAME})
 
 
