--- a/3rd_party/easy3d/fileio/CMakeLists.txt
+++ b/3rd_party/easy3d/fileio/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
 get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-set(PROJECT_NAME 3rd_${MODULE_NAME})
+set(PROJECT_NAME easy3d_${MODULE_NAME})
 project(${PROJECT_NAME})
 
 
@@ -30,7 +30,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "3rd_party/easy3d")
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${ADTREE_easy3d_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} 3rd_core 3rd_rply 3rd_util)
+target_link_libraries(${PROJECT_NAME} easy3d_core 3rd_rply easy3d_util)
 
 if (MSVC)
     target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_DEPRECATE)
