fix typo in path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,6 @@ add_subdirectory(AdTree)
 ## Resources
 # Copy resources dirs into our shadow build directory. For AdTree only the shaders are needed
 if (NOT APPLE)
-        file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/resources/shaders DESTINATION" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources")
+        file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/resources/shaders" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources")
 endif ()
 
