--- a/AdTree/CMakeLists.txt
+++ b/AdTree/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.1)
 get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 project(${PROJECT_NAME})
 
+if (POLICY CMP0074)
+    cmake_policy(SET CMP0074 NEW)
+endif ()
 
 set(${PROJECT_NAME}_SOURCES
         main.cpp
