--- a/3rd_party/glew/CMakeLists.txt
+++ b/3rd_party/glew/CMakeLists.txt
@@ -29,13 +29,14 @@ file(STRINGS ${GLEW_DIR}/config/version _VERSION_PATCH_STRING REGEX "GLEW_MICRO[
 string(REGEX REPLACE "GLEW_MICRO[ ]*=[ ]*([0-9]+)" "\\1" CPACK_PACKAGE_VERSION_PATCH ${_VERSION_PATCH_STRING})
 set(GLEW_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
 
-if (NOT GLEW_CUSTOM_OUTPUT_DIRS)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-endif ()
-
-find_package(OpenGL REQUIRED)
+if(WIN32 OR MSVC OR APPLE)
+    find_package(OpenGL COMPONENTS OpenGL REQUIRED)
+    set(GLEW_LIBRARIES ${OPENGL_gl_LIBRARY})
+else() # == if(UNIX AND NOT APPLE)
+    set(OpenGL_GL_PREFERENCE GLVND)
+    find_package(OpenGL COMPONENTS OpenGL GLX REQUIRED)
+    set(GLEW_LIBRARIES ${OPENGL_opengl_LIBRARY} ${OPENGL_glx_LIBRARY})
+endif()
 
 # cmake<3.10 doesn't detect EGL/GLX
 if (CMAKE_VERSION VERSION_LESS 3.10)
@@ -43,13 +44,6 @@ if (CMAKE_VERSION VERSION_LESS 3.10)
     if (OPENGL_egl_LIBRARY)
         set(OpenGL_EGL_FOUND TRUE)
     endif ()
-endif ()
-
-# prefer GLVND
-if (OPENGL_opengl_LIBRARY)
-    set(GLEW_LIBRARIES ${OPENGL_opengl_LIBRARY})
-else ()
-    set(GLEW_LIBRARIES ${OPENGL_gl_LIBRARY})
 endif ()
 
 # X11 required except for Windows and Apple OSX platforms
