--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -28,7 +28,9 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update || true
-          sudo apt-get install -y build-essential libboost-all-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
+          sudo apt-get install -y build-essential libboost-all-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev \
+                                  libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev 
+        
           mkdir -p build && cd build
           cmake -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ..
           make
