--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,18 @@ project(${PROJECT_NAME})
 
 ################################################################################
 
-set (CMAKE_CXX_STANDARD 11)
+# specify the C++ standard
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+message(STATUS "Using C++11")
+
+if(MSVC)
+        # The /MP flag is available and works as intended with the MSVC compiler
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+elseif(CMAKE_BUILD_PARALLEL_LEVEL)
+        # Use build system parallelism (e.g., `make -j` or `ninja`)
+        set(CMAKE_BUILD_PARALLEL_LEVEL 8) # Example: Use 8 threads
+endif()
 
 ################################################################################
 
